force-app/main/default/objects/OrderItem/fields/Accpac_DetailNumber__c.field-meta.xml
<CustomField>
    <fullName>Accpac_DetailNumber__c</fullName>
    <label>Accpac DetailNumber</label>
    <type>TextArea</type>
</CustomField>