force-app/main/default/objects/OrderItem/fields/Accpac_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>Accpac_ItemNumber__c</fullName>
    <label>Accpac ItemNumber</label>
    <type>TextArea</type>
</CustomField>