force-app/main/default/objects/OrderItem/fields/Accpac_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>Accpac_LineNumber__c</fullName>
    <label>Accpac LineNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>