force-app/main/default/objects/OrderItem/fields/Accpac_LinePrice__c.field-meta.xml
<CustomField>
    <fullName>Accpac_LinePrice__c</fullName>
    <label>Accpac LinePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>