force-app/main/default/objects/OrderItem/fields/Accpac_Order_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Order_Unique_Number__c</fullName>
    <label>Accpac Order Unique Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>