force-app/main/default/objects/OrderItem/fields/Areas_of_Coverage_Other__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Coverage_Other__c</fullName>
    <label>Areas of Coverage Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>