force-app/main/default/objects/OrderItem/fields/By_Pass_Activation__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will allow an update of Order Product record even if it&apos;s Inactive. This is required for CPQ2.</description>
    <label>By Pass Activation</label>
    <type>Checkbox</type>
</CustomField>