force-app/main/default/objects/OrderItem/fields/Bypass_Standing_Order_Price_Engine__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Standing_Order_Price_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Standing Order Price Engine</label>
    <type>Checkbox</type>
</CustomField>