force-app/main/default/objects/OrderItem/fields/Clone_Status__c.field-meta.xml
<CustomField>
    <fullName>Clone_Status__c</fullName>
    <description>This field is used to represent whether an order product has been moved to a new order</description>
    <label>Clone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>