force-app/main/default/objects/OrderItem/fields/Cloned_From_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Order Line was created via the Order Merge batch</description>
    <inlineHelpText>This Order Line was created via the Order Merge batch</inlineHelpText>
    <label>Cloned From Order Line</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Cloned From Order Line)</relationshipLabel>
    <relationshipName>Cloned_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>