force-app/main/default/objects/OrderItem/fields/Covered_Pests_Other__c.field-meta.xml
<CustomField>
    <fullName>Covered_Pests_Other__c</fullName>
    <label>Covered Pests Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>