force-app/main/default/objects/OrderItem/fields/CPQ2_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Duration_In_Minutes__c</fullName>
    <description>DO NOT CHANGE, Just noting this field for stamping purposes</description>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>