force-app/main/default/objects/OrderItem/fields/CPQ2_Line_Score_Colour__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Line_Score_Colour__c</fullName>
    <label>Line Score Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>