force-app/main/default/objects/OrderItem/fields/CPQ2_Number_Of_Visits_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Number_Of_Visits_Per_Year__c</fullName>
    <label>Number Of Visits Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>