force-app/main/default/objects/OrderItem/fields/CPQ2_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>