force-app/main/default/objects/OrderItem/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>