force-app/main/default/objects/OrderItem/fields/DeInstallation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>DeInstallation_Work_Type__c</fullName>
    <formula>PricebookEntry.Product2.DeInstallation_Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeInstallation Work Type</label>
    <type>Text</type>
</CustomField>