force-app/main/default/objects/OrderItem/fields/Delivery_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Work_Type__c</fullName>
    <formula>PricebookEntry.Product2.Delivery_Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Work Type</label>
    <type>Text</type>
</CustomField>