force-app/main/default/objects/OrderItem/fields/First_Installation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Installation_Completed_Date__c</fullName>
    <label>First Installation Completed Date</label>
    <type>Date</type>
</CustomField>