force-app/main/default/objects/OrderItem/fields/FrequencyInDays__c.field-meta.xml
<CustomField>
    <fullName>FrequencyInDays__c</fullName>
    <formula>CASE(Frequency__c,
&apos;One-Time&apos;, 0, 
&apos;Daily&apos;, 1,
&apos;6X Per Week&apos;, 2,
&apos;5X Per Week&apos;, 3,
&apos;4X Per Week&apos;, 4,
&apos;3X Per Week&apos;, 5,
&apos;2X Per Week&apos;, 6,
&apos;Weekly&apos;, 7, 
&apos;Fixed Weekly&apos;, 7,
&apos;14 Days&apos;, 14,
&apos;Twice Monthly&apos;, 15, 
&apos;28 Days&apos;, 28,
&apos;Monthly&apos;, 30, 
&apos;42 Days&apos;, 42,
&apos;56 Days&apos;, 56,
&apos;Bi-Monthly&apos;, 60,
&apos;84 Days&apos;, 84,
&apos;Quarterly&apos;, 90,
&apos;112 Days&apos;, 112,
&apos;120 Days&apos;, 120,
&apos;168 Days&apos;, 168,
&apos;Semi-Annually&apos;, 182,
&apos;2X Per Year&apos;, 182, 
&apos;182 Days&apos;, 182,
&apos;Annually&apos;, 365, 
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FrequencyInDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>