force-app/main/default/objects/OrderItem/fields/Has_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Has_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Warranty</label>
    <type>Checkbox</type>
</CustomField>