force-app/main/default/objects/OrderItem/fields/HasSurveyAssets__c.field-meta.xml
<CustomField>
    <fullName>HasSurveyAssets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSurveyAssets</label>
    <type>Checkbox</type>
</CustomField>