force-app/main/default/objects/OrderItem/fields/IFA__c.field-meta.xml
<CustomField>
    <fullName>IFA__c</fullName>
    <description>Checked = Yes, Allowed
Unchecked = No, Not Allowed
This field was created for reporting purposes. We needed to show on a dashboard the number of accounts that have order products with a frequency not allowed per its related Product2 &quot;Allowable Frequency&quot;.</description>
    <formula>/*EN 2020-10-27: Checks if Frequency is allowed by converting the related Product2 allowable frequency multi-picklist value into a concatenated text string; then checks if the Order Item&apos;s Service Frequency is included in that string. Checked = Allowed, Unchecked = Not Allowed*/

CONTAINS(SUBSTITUTE(
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c , &apos;One-Time&apos;), &apos;One-Time,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Daily&apos;), &apos;Daily,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;2X Per Week&apos;), &apos;2X Per Week,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;3X Per Week&apos;), &apos;3X Per Week,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;5X Per Week&apos;), &apos;5X Per Week,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;6X Per Week&apos;), &apos;6X Per Week,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Fixed Weekly&apos;), &apos;Fixed Weekly,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Weekly&apos;), &apos;Weekly,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;14 Days&apos;), &apos;14 Days,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Twice Monthly&apos;), &apos;Twice Monthly,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;28 Days&apos;),&apos;28 Days,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Monthly&apos;), &apos;Monthly,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;42 Days&apos;),&apos;42 Days,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;56 Days&apos;), &apos;56 Days,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Bi-Monthly&apos;), &apos;Bi-Monthly,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;84 Days&apos;), &apos;84 Days,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Quarterly&apos;),&apos;Quarterly,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;112 Days&apos;),&apos;112 Days,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;120 Days&apos;),&apos;120 Days,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;168 Days&apos;),&apos;168 Days,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;182 Days&apos;),&apos;182 Days,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;2X Per Year&apos;),&apos;2X Per Year,&apos;, NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Semi-Annually&apos;), &apos;Semi-Annually,&apos;,NULL) +
IF(INCLUDES(PricebookEntry.Product2.Allowable_Frequencies__c, &apos;Annually&apos;),&apos;Annually,&apos;, NULL) + &apos;.&apos;,
&apos;,.&apos;,
NULL
),

TEXT(Frequency__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFrequencyAllowed</label>
    <type>Checkbox</type>
</CustomField>