force-app/main/default/objects/OrderItem/fields/Installation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Work_Type__c</fullName>
    <formula>PricebookEntry.Product2.Installation_Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Work Type</label>
    <type>Text</type>
</CustomField>