force-app/main/default/objects/OrderItem/fields/Inventory_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Allocated</label>
    <type>Checkbox</type>
</CustomField>