force-app/main/default/objects/OrderItem/fields/Inventory_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Consumed</label>
    <type>Checkbox</type>
</CustomField>