force-app/main/default/objects/OrderItem/fields/Is_Never_Generate_Work_order__c.field-meta.xml
<CustomField>
    <fullName>Is_Never_Generate_Work_order__c</fullName>
    <formula>IF(PricebookEntry.Product2.Never_Generate_Work_Order__c = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Never Generate Work order?</label>
    <type>Checkbox</type>
</CustomField>