force-app/main/default/objects/OrderItem/fields/Is_Replacement_from_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Replacement_from_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Replacement from Flow</label>
    <type>Checkbox</type>
</CustomField>