force-app/main/default/objects/OrderItem/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>PricebookEntry.IsActive  &amp;&amp;  PricebookEntry.Product2.IsActive &amp;&amp;  Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>