force-app/main/default/objects/OrderItem/fields/isPurchase__c.field-meta.xml
<CustomField>
    <fullName>isPurchase__c</fullName>
    <formula>NOT(ISBLANK(Purchase_Price__c))</formula>
    <label>isPurchase</label>
    <type>Checkbox</type>
</CustomField>