force-app/main/default/objects/OrderItem/fields/isSchedulable__c.field-meta.xml
<CustomField>
    <fullName>isSchedulable__c</fullName>
    <formula>IF( ISBLANK( Next_Service_Date__c ) ,  
     TODAY() &lt;= ( Order.EffectiveDate + $Setup.Field_Service_Settings__c.Schedule_Window__c ) , 
     TODAY() &lt;= ( Next_Service_Date__c + $Setup.Field_Service_Settings__c.Schedule_Window__c )
   )</formula>
    <label>isSchedulable</label>
    <type>Checkbox</type>
</CustomField>