force-app/main/default/objects/OrderItem/fields/isService__c.field-meta.xml
<CustomField>
    <fullName>isService__c</fullName>
    <formula>NOT(ISBLANK(Service_Price_Per_Unit__c))</formula>
    <label>isService</label>
    <type>Checkbox</type>
</CustomField>