force-app/main/default/objects/OrderItem/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <formula>IF(PricebookEntry.Product2.Never_Generate_Work_Order__c, FALSE, IF(PricebookEntry.Product2.Heavy_Equipment__c, 
Inventory_Allocated__c &amp;&amp; NOT( ISBLANK(Serial_Number__c) ), 
Order.Inventory_Allocated__c || Order.Emergency__c || Inventory_Allocated__c))</formula>
    <label>isValid</label>
    <type>Checkbox</type>
</CustomField>