force-app/main/default/objects/OrderItem/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <label>Item Number</label>
    <type>TextArea</type>
</CustomField>