force-app/main/default/objects/OrderItem/fields/Last_Automation_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Automation_Created_Date__c</fullName>
    <description>This field is System Generated during the nightly Work Order Generation batch job. Changing this would have implications on Work Order Generation Logic</description>
    <label>Last Automation Created Date</label>
    <type>Date</type>
</CustomField>