force-app/main/default/objects/OrderItem/fields/Last_InFlight_WO_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_InFlight_WO_Date__c</fullName>
    <label>Last InFlight WO Date</label>
    <type>Date</type>
</CustomField>