force-app/main/default/objects/OrderItem/fields/Last_Order_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Active_Date__c</fullName>
    <formula>IF(ISNULL(Order.LastDeactivatedDate__c),Order.CreatedDate,Order.LastDeactivatedDate__c)</formula>
    <label>Last Order Active Date</label>
    <type>DateTime</type>
</CustomField>