force-app/main/default/objects/OrderItem/fields/Last_Scanned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scanned_Date__c</fullName>
    <label>Last Scanned Date</label>
    <type>Date</type>
</CustomField>