force-app/main/default/objects/OrderItem/fields/Last_Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous, most recent service plan</description>
    <label>Last Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Order Products (Last Service Plan)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>