force-app/main/default/objects/OrderItem/fields/Last_Service_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Plan_Name__c</fullName>
    <description>Name of the last service plan to which this product was associated</description>
    <formula>Last_Service_Plan__r.Name</formula>
    <inlineHelpText>Name of the last service plan to which this product was associated</inlineHelpText>
    <label>Last Service Plan Name</label>
    <type>Text</type>
</CustomField>