force-app/main/default/objects/OrderItem/fields/Last_Work_Order_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Work_Order_Completed_Date__c</fullName>
    <label>Last Work Order Completed Date</label>
    <type>Date</type>
</CustomField>