force-app/main/default/objects/OrderItem/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>