force-app/main/default/objects/OrderItem/fields/Need_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Need_Ticket__c</fullName>
    <label>Need Ticket</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>