force-app/main/default/objects/OrderItem/fields/Next_Schedule_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Schedule_Due_Date__c</fullName>
    <label>Next Schedule Due Date</label>
    <type>Date</type>
</CustomField>