force-app/main/default/objects/OrderItem/fields/Next_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Date__c</fullName>
    <label>Next Scheduled Date</label>
    <type>Date</type>
</CustomField>