force-app/main/default/objects/OrderItem/fields/Obsolete_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Previous Order Product)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>