force-app/main/default/objects/OrderItem/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Order Item cannot have the custom Order field set as it&apos;s Inactive.</errorMessage>
        <filterItems>
            <field>$Source.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Active Order Products without PO Number</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>