force-app/main/default/objects/OrderItem/fields/OrderItemUniqueNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderItemUniqueNumber__c</fullName>
    <label>OrderItemUniqueNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>