force-app/main/default/objects/OrderItem/fields/Parent_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_ID__c</fullName>
    <formula>Order.Parent_Order__c</formula>
    <inlineHelpText>Order Id representing the Parent Order value, on the related order record.</inlineHelpText>
    <label>Parent Order ID</label>
    <type>Text</type>
</CustomField>