force-app/main/default/objects/OrderItem/fields/PBE_List_Price__c.field-meta.xml
<CustomField>
    <fullName>PBE_List_Price__c</fullName>
    <formula>PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBE List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>