force-app/main/default/objects/OrderItem/fields/Product_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_Number__c</fullName>
    <formula>PricebookEntry.Product2.ExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Item Number</label>
    <type>Text</type>
</CustomField>