force-app/main/default/objects/OrderItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>